# Wheather-App

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  request.cpp  request.h  virtuallistcontrol.h
